- Fixed the Dark Mode Toggle's positioning. - Updated some of the minor details (e.g. bold text, color, etc) - Added CSS to the Dark Mode Toggle - Total Following below header now shows proper number format.

--- a/src/scss/modules/rchieyves.scss
+++ b/src/scss/modules/rchieyves.scss
@@ -21,153 +21,256 @@ body {
                   hsl(232, 19%, 15%) 30%,
                   hsl(230, 17%, 14%) 30%,
                   hsl(230, 17%, 14%) 100%) fixed;
-  color: white;
+  color: hsl(0, 0%, 100%);
   font-family: Inter, sans-serif;
 }
 
 .content {
   width: 1120px;
   margin: 0 auto;
+
+  header{
+    width: 50%;
+    float: left;
+    margin: 2em 0 2em 0;
+    .total{
+      color: hsl(228, 34%, 66%);
+    }
+  }
+
+  aside{
+    width: 50%;
+    float: right;
+    margin-top: 2rem;
+    color: hsl(228, 34%, 66%);
+    font-weight: bold;
+  }
+
+  h2{
+    margin: 2em 0 1em 0;
+  }
 }
 
-.content header{
-  margin: 2em 0 2em 0;
-}
+.content{
+  .mode-toggle{
+    position: relative;
+    width: 50%;
+    height: 61px;
+    float: right;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 0.5em;
 
-.content h2{
-  margin: 2em 0 1em 0;
-}
+    input{
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
 
-.content .total{
-  color: hsl(228, 34%, 66%);
+    .toggle-slider{
+      position: relative;
+      cursor: pointer;
+      background: linear-gradient(to right, hsl(210, 78%, 56%), hsl(146, 68%, 55%)); // change
+      transition: .2s;
+      width: 50px;
+      height: 25px;
+    }
+
+    .toggle-slider:before{
+      position: absolute;
+      content: "";
+      height: 19px;
+      width: 19px;
+      left: 3px;
+      bottom: 3px;
+      background: hsl(230, 17%, 14%); //light mode
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+
+    input:checked + .toggle-slider {
+      background: hsl(230, 22%, 74%); //change
+    }
+
+    input:checked + .toggle-slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(24px);
+    }
+
+    /* Rounded sliders */
+    .toggle-slider.ball {
+      border-radius: 34px;
+    }
+
+    .toggle-slider.ball:before {
+      border-radius: 50%;
+    }
+  }
 }
 
 .primary-cards {
+  clear: both;
   display: flex;
   flex-direction: row;
-  gap: 32px;
+  gap: 35px;
 }
 
-.primary-cards .card {
-  width: 253px;
-  padding: 2rem;
-  text-align: center;
-  border-radius: 5px;
-  background-color: hsl(228, 28%, 20%);
+.primary-cards {
+  .card{
+    position: relative;
+    width: 253px;
+    padding: 2rem;
+    text-align: center;
+    border-radius: 5px;
+    background-color: hsl(228, 28%, 20%);
+    overflow: hidden;
+  }
+
+  .card:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 5px;
+  }
 }
 
-.primary-cards .card.service-facebook{
-  border-top: 5px solid hsl(208, 92%, 53%);
+.primary-cards {
+  .card.service-facebook{
+    border-top: 5px solid hsl(208, 92%, 53%);
+  }
+
+  .card.service-twitter{
+    border-top: 5px solid hsl(203, 89%, 53%);
+  }
+
+  .card.service-instagram:before{
+    border-top: 5px solid;
+    border-image: linear-gradient(to right, hsl(37, 97%, 70%),hsl(329, 70%, 58%)) 100% 0;
+  }
+
+  .card.service-youtube{
+    border-top: 5px solid hsl(348, 97%, 39%);
+  }
 }
 
-.primary-cards .card.service-twitter{
-  border-top: 5px solid hsl(203, 89%, 53%);
+
+.primary-cards{
+  .card{
+    .card-user{
+      display: flex;
+      justify-content: center;
+      gap: 5px;
+      color: hsl(228, 34%, 66%);
+      font-size: 14px;
+    }
+  }
 }
 
-.primary-cards .card.service-instagram{
-  border-top: 5px solid;
-  border-image: linear-gradient(to right, hsl(37, 97%, 70%),hsl(329, 70%, 58%)) 100% 0;
+.primary-cards{
+  .card{
+    .card-main{
+      .card-number{
+        padding-top: 20px;
+        font-size: 50px;
+        font-weight: 700;
+      }
+      .card-label{
+        text-transform: uppercase;
+        font-weight: 400;
+        letter-spacing: 2px;
+        color: hsl(228, 34%, 66%);
+      }
+    }
+  }
 }
 
-.primary-cards .card.service-youtube{
-  border-top: 5px solid hsl(348, 97%, 39%);
+.primary-cards {
+  .card{
+    .card-metric{
+      padding-top: 20px;
+      display: flex;
+      justify-content: center;
+      gap: 5px;
+
+      .trend-up{
+        color:  hsl(163, 72%, 41%);
+      }
+
+      .trend-down{
+        color: hsl(356, 69%, 56%);
+      }
+
+      img{
+        height: 6px;
+        width: 8px;
+        margin-top: 6px;
+      }
+    }
+  }
 }
 
-.primary-cards .card .card-user{
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-  color: hsl(228, 34%, 66%);
-  font-size: 14px;
-}
-
-.primary-cards .card .card-main .card-number{
-  padding-top: 20px;
-  font-size: 50px;
-  font-weight: 700;
-}
-
-.primary-cards .card .card-main .card-label{
-  text-transform: uppercase;
-  font-weight: 400;
-  letter-spacing: 2px;
-  color: hsl(228, 34%, 66%);
-}
-
-.primary-cards .card .card-metric{
-  padding-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 5px
-
-}
-
-.primary-cards .card .card-metric .trend-up{
-  color:  hsl(163, 72%, 41%);
-}
-
-.primary-cards .card .card-metric .trend-down{
-  color: hsl(356, 69%, 56%);
-}
-
-.primary-cards .card .card-metric img{
-  height: 6px;
-  width: 8px;
-  margin-top: 6px;
-}
 
 .supporting-cards {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 32px;
-}
 
-.supporting-cards .card {
-  width: 253px;
-  padding: 2rem;
-  text-align: center;
-  border-radius: 5px;
-  background-color: hsl(228, 28%, 20%);
-}
+  //card
+  .card{
+    width: 253px;
+    padding: 2rem;
+    text-align: center;
+    border-radius: 5px;
+    background-color: hsl(228, 28%, 20%);
 
-.supporting-cards .card .card-info{
-  margin-bottom: 35px;
-  display: flex;
-  justify-content: space-between;
-}
+    .card-info{
+      margin-bottom: 35px;
+      display: flex;
+      justify-content: space-between;
 
-.supporting-cards .card .card-info .card-value{
-  color: hsl(228, 34%, 66%);
-}
+      .card-value{
+        color: hsl(228, 34%, 66%);
+      }
+    }
 
-.supporting-cards .card .card-main{
-  margin-top: 35px;
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-}
+    //card main
+    .card-main{
+      margin-top: 35px;
+      display: flex;
+      justify-content: space-between;
+      text-align: center;
 
-.supporting-cards .card .card-main .card-number{
-  font-size: 30px;
-  font-weight: 700;
-}
+      .card-number{
+        font-size: 30px;
+        font-weight: 700;
+      }
 
-.supporting-cards .card .card-main .card-metric{
-  margin-top: 7px;
-  display: flex;
-  gap: 5px;
-}
+      // card metrics
+      .card-metric{
+        margin-top: 7px;
+        display: flex;
+        gap: 5px;
 
-.supporting-cards .card .card-main .card-metric .trend-up{
-  color:  hsl(163, 72%, 41%);
-}
+        .trend-up{
+          color:  hsl(163, 72%, 41%);
+        }
 
-.supporting-cards .card .card-main .card-metric .trend-down{
-  color: hsl(356, 69%, 56%);
-}
+        .trend-down{
+          color: hsl(356, 69%, 56%);
+        }
 
-.supporting-cards .card .card-main .card-metric img{
-  height: 6px;
-  width: 8px;
-  margin-top: 6px;
+        img{
+          height: 6px;
+          width: 8px;
+          margin-top: 6px;
+        }
+      }
+    }
+  }
 }
